--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "framer-motion": "^12.4.7",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-confetti": "^6.2.3",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
