--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "dist/**/*.js",
+      "src": "src/server.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/dist/$1"
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
     }
   ]
 }
