--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon --ext ts --exec ts-node src/server.ts",
     "build": "tsc",
-    "start": "npm run build && nodemon dist/server.js",
+    "start": "node dist/server.js",
     "test": "jest --coverage"
   },
   "keywords": [],
